# fastapi-base-advanced

./: README.md  pyproject.toml
app/: config.py  main.py
app/database/: db.py  redis.py
app/errors/: __init__.py  errors.py
app/models/: __init__.py  note_model.py  user_model.py
app/repos/: __init__.py  note_repo.py  user_repo.py
app/routers/: auth_router.py  note_router.py  user_router.py
app/schemas/: note_schema.py  user_schema.py
app/services/: __init__.py  auth.py  note_service.py  user_service.py
migrations/: env.py
migrations/versions/: 96740ebca70e_database_creation.py  b52d95e27efe_database_creation.py
tests/repo_tests/: test_note_repo.py  test_user_repo.py
tests/test_services/: test_note_service.py  test_user_service.py
