[tool.poetry]
name = "fastapi-base-advanced"
version = "0.1.0"
description = ""
authors = ["Slava Kuryaev <92830706+necrosskull@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
redis = "^5.0.7"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.13.2"
ruff = "^0.5.2"
pytest = "^8.3.1"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
